--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome My website!</h1>
+        <h2>Hello Heading 2!</h2>
         Hello, World!
         
     </body>
