Added h1 text color

--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Welcome My website!</h1>
+        <h1 style = "color:blue";>Welcome My website!</h1>
         <h2>Hello Heading 2!</h2>
         Hello, World!
         
